--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -1,4 +1,4 @@
-name: Test App APK Build
+name: Test App APK with Dark Mode
 
 on:
   push:
@@ -17,11 +17,11 @@ jobs:
 
       - uses: android-actions/setup-android@v3
 
-      - name: Prepare Android project (Clean UI)
+      - name: Prepare Android Project (Dark Mode UI)
         run: |
           mkdir -p app/src/main/{assets,java/com/example/testapp}
 
-          # HTML
+          # HTML with Dark/Light mode buttons
           cat <<EOF > app/src/main/assets/index.html
           <!DOCTYPE html>
           <html lang="en">
@@ -36,18 +36,16 @@ jobs:
                   <div class="container">
                       <span class="brand">Test App</span>
                       <ul class="nav">
-                          <li><a href="#">Home</a></li>
-                          <li><a href="#">Docs</a></li>
-                          <li><a href="#">Examples</a></li>
+                          <li><button onclick="setLightMode()">Light Mode</button></li>
+                          <li><button onclick="setDarkMode()">Dark Mode</button></li>
                       </ul>
                   </div>
               </nav>
 
               <header class="hero">
                   <div class="container">
-                      <h1>Build fast, responsive sites easily</h1>
-                      <p>A simple, modern UI toolkit.</p>
-                      <button onclick="showAlert()">Get Started</button>
+                      <h1>Responsive, Modern UI</h1>
+                      <p>Toggle between Dark and Light modes.</p>
                   </div>
               </header>
 
@@ -56,23 +54,53 @@ jobs:
           </html>
           EOF
 
-          # CSS
+          # CSS (Light & Dark mode support)
           cat <<EOF > app/src/main/assets/style.css
-          body {margin:0;font-family:sans-serif;color:#212529;background:#fff;}
-          .container {width:90%;margin:auto;max-width:900px;}
-          .navbar {background-color:#563d7c;padding:15px;color:#fff;}
-          .navbar .brand {font-weight:bold;font-size:1.2em;}
-          .navbar .nav {list-style:none;padding:0;margin:0;float:right;}
-          .navbar .nav li {display:inline-block;margin-left:15px;}
-          .navbar .nav a {color:#fff;text-decoration:none;}
-          .hero {padding:80px 0;text-align:center;}
-          .hero h1 {font-size:3em;margin-bottom:0.3em;}
-          .hero button {padding:10px 20px;font-size:16px;background-color:#7952b3;color:#fff;border:none;border-radius:5px;}
+          :root {
+              --bg-color: #fff;
+              --text-color: #212529;
+              --navbar-bg: #563d7c;
+              --button-bg: #7952b3;
+              --button-text: #fff;
+          }
+          [data-theme="dark"] {
+              --bg-color: #121212;
+              --text-color: #e0e0e0;
+              --navbar-bg: #333;
+              --button-bg: #555;
+              --button-text: #fff;
+          }
+          body {
+              margin:0; font-family:sans-serif;
+              background-color: var(--bg-color);
+              color: var(--text-color);
+          }
+          .container { width:90%; margin:auto; max-width:900px; }
+          .navbar {
+              background-color: var(--navbar-bg);
+              padding:15px; color:#fff;
+          }
+          .navbar .brand { font-weight:bold; font-size:1.2em; }
+          .navbar .nav { list-style:none; float:right; }
+          .navbar .nav button {
+              padding: 5px 10px;
+              margin-left:10px;
+              cursor: pointer;
+              background-color: var(--button-bg);
+              color: var(--button-text);
+              border: none; border-radius:4px;
+          }
+          .hero { padding:80px 0; text-align:center; }
           EOF
 
-          # JS
+          # JavaScript (Dark/Light mode functions)
           cat <<EOF > app/src/main/assets/script.js
-          function showAlert(){alert('Welcome to your Test App!')}
+          function setDarkMode(){
+              document.documentElement.setAttribute('data-theme', 'dark');
+          }
+          function setLightMode(){
+              document.documentElement.setAttribute('data-theme', 'light');
+          }
           EOF
 
           # AndroidManifest
@@ -110,7 +138,7 @@ jobs:
           }
           EOF
 
-          # Gradle Files
+          # build.gradle
           mkdir -p app
           cat <<EOF > app/build.gradle
           plugins { id 'com.android.application' }
@@ -130,6 +158,7 @@ jobs:
               }
           }
           EOF
+
           echo "include ':app'" > settings.gradle
 
           cat <<EOF > build.gradle
@@ -151,8 +180,8 @@ jobs:
           chmod +x ./gradlew
           ./gradlew assembleDebug
 
-      - name: Upload APK
+      - name: Upload APK Artifact
         uses: actions/upload-artifact@v4
         with:
-          name: Test-App-APK
+          name: Test-App-DarkMode-APK
           path: app/build/outputs/apk/debug/app-debug.apk
