--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -1,187 +1,65 @@
-name: Test App APK with Dark Mode
+name: Note App CI/CD
 
 on:
   push:
-    branches: [main]
+    branches:
+      - main
+  workflow_dispatch:
 
 jobs:
-  build-apk:
+  build-and-deploy:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v4
+      - name: Checkout Repository
+        uses: actions/checkout@v4
 
-      - uses: actions/setup-java@v4
+      - name: Setup Node.js
+        uses: actions/setup-node@v4
         with:
-          distribution: temurin
-          java-version: 17
+          node-version: '20'
 
-      - uses: android-actions/setup-android@v3
-
-      - name: Prepare Android Project (Dark Mode UI)
+      - name: Create Project Files
         run: |
-          mkdir -p app/src/main/{assets,java/com/example/testapp}
-
-          # HTML with Dark/Light mode buttons
-          cat <<EOF > app/src/main/assets/index.html
+          mkdir -p dist
+          cat <<EOF > dist/index.html
           <!DOCTYPE html>
           <html lang="en">
           <head>
-              <meta charset="UTF-8">
-              <meta name="viewport" content="width=device-width, initial-scale=1">
-              <title>Test App</title>
-              <link rel="stylesheet" href="style.css">
+            <meta charset="UTF-8">
+            <meta name="viewport" content="width=device-width, initial-scale=1.0">
+            <title>Minimal Note App</title>
+            <style>
+              body { font-family: sans-serif; padding: 20px; background-color: #f8f8f8; }
+              textarea { width: 100%; height: 300px; padding: 15px; font-size: 16px; }
+              button { padding: 10px 15px; margin-top: 10px; cursor: pointer; }
+            </style>
           </head>
           <body>
-              <nav class="navbar">
-                  <div class="container">
-                      <span class="brand">Test App</span>
-                      <ul class="nav">
-                          <li><button onclick="setLightMode()">Light Mode</button></li>
-                          <li><button onclick="setDarkMode()">Dark Mode</button></li>
-                      </ul>
-                  </div>
-              </nav>
+            <h2>Minimal Note App</h2>
+            <textarea id="note"></textarea>
+            <br>
+            <button onclick="saveNote()">Save Note</button>
+            <button onclick="clearNote()">Clear Note</button>
 
-              <header class="hero">
-                  <div class="container">
-                      <h1>Responsive, Modern UI</h1>
-                      <p>Toggle between Dark and Light modes.</p>
-                  </div>
-              </header>
-
-              <script src="script.js"></script>
+            <script>
+              const note = document.getElementById('note');
+              window.onload = () => note.value = localStorage.getItem('note') || '';
+              function saveNote() {
+                localStorage.setItem('note', note.value);
+                alert('Note saved!');
+              }
+              function clearNote() {
+                note.value = '';
+                localStorage.removeItem('note');
+                alert('Note cleared!');
+              }
+            </script>
           </body>
           </html>
           EOF
 
-          # CSS (Light & Dark mode support)
-          cat <<EOF > app/src/main/assets/style.css
-          :root {
-              --bg-color: #fff;
-              --text-color: #212529;
-              --navbar-bg: #563d7c;
-              --button-bg: #7952b3;
-              --button-text: #fff;
-          }
-          [data-theme="dark"] {
-              --bg-color: #121212;
-              --text-color: #e0e0e0;
-              --navbar-bg: #333;
-              --button-bg: #555;
-              --button-text: #fff;
-          }
-          body {
-              margin:0; font-family:sans-serif;
-              background-color: var(--bg-color);
-              color: var(--text-color);
-          }
-          .container { width:90%; margin:auto; max-width:900px; }
-          .navbar {
-              background-color: var(--navbar-bg);
-              padding:15px; color:#fff;
-          }
-          .navbar .brand { font-weight:bold; font-size:1.2em; }
-          .navbar .nav { list-style:none; float:right; }
-          .navbar .nav button {
-              padding: 5px 10px;
-              margin-left:10px;
-              cursor: pointer;
-              background-color: var(--button-bg);
-              color: var(--button-text);
-              border: none; border-radius:4px;
-          }
-          .hero { padding:80px 0; text-align:center; }
-          EOF
-
-          # JavaScript (Dark/Light mode functions)
-          cat <<EOF > app/src/main/assets/script.js
-          function setDarkMode(){
-              document.documentElement.setAttribute('data-theme', 'dark');
-          }
-          function setLightMode(){
-              document.documentElement.setAttribute('data-theme', 'light');
-          }
-          EOF
-
-          # AndroidManifest
-          cat <<EOF > app/src/main/AndroidManifest.xml
-          <manifest xmlns:android="http://schemas.android.com/apk/res/android">
-              <application android:allowBackup="true" android:label="Test App" android:icon="@android:drawable/ic_menu_info_details">
-                  <activity android:name=".MainActivity" android:exported="true">
-                      <intent-filter>
-                          <action android:name="android.intent.action.MAIN"/>
-                          <category android:name="android.intent.category.LAUNCHER"/>
-                      </intent-filter>
-                  </activity>
-              </application>
-              <uses-sdk android:minSdkVersion="21" android:targetSdkVersion="34"/>
-          </manifest>
-          EOF
-
-          # MainActivity.java
-          cat <<EOF > app/src/main/java/com/example/testapp/MainActivity.java
-          package com.example.testapp;
-          import android.app.Activity;
-          import android.os.Bundle;
-          import android.webkit.WebSettings;
-          import android.webkit.WebView;
-          public class MainActivity extends Activity {
-              @Override
-              protected void onCreate(Bundle savedInstanceState) {
-                  super.onCreate(savedInstanceState);
-                  WebView webview = new WebView(this);
-                  WebSettings settings = webview.getSettings();
-                  settings.setJavaScriptEnabled(true);
-                  webview.loadUrl("file:///android_asset/index.html");
-                  setContentView(webview);
-              }
-          }
-          EOF
-
-          # build.gradle
-          mkdir -p app
-          cat <<EOF > app/build.gradle
-          plugins { id 'com.android.application' }
-          android {
-              namespace 'com.example.testapp'
-              compileSdk 34
-              defaultConfig {
-                  applicationId "com.example.testapp"
-                  minSdk 21
-                  targetSdk 34
-                  versionCode 1
-                  versionName "1.0"
-              }
-              compileOptions {
-                  sourceCompatibility JavaVersion.VERSION_17
-                  targetCompatibility JavaVersion.VERSION_17
-              }
-          }
-          EOF
-
-          echo "include ':app'" > settings.gradle
-
-          cat <<EOF > build.gradle
-          buildscript {
-              repositories { google(); mavenCentral() }
-              dependencies { classpath 'com.android.tools.build:gradle:8.4.0' }
-          }
-          allprojects { repositories { google(); mavenCentral() } }
-          EOF
-
-          echo "org.gradle.jvmargs=-Xmx2048m" > gradle.properties
-
-          wget https://services.gradle.org/distributions/gradle-8.7-bin.zip
-          unzip gradle-8.7-bin.zip
-          ./gradle-8.7/bin/gradle wrapper
-
-      - name: Build APK
-        run: |
-          chmod +x ./gradlew
-          ./gradlew assembleDebug
-
-      - name: Upload APK Artifact
-        uses: actions/upload-artifact@v4
+      - name: Deploy to GitHub Pages
+        uses: peaceiris/actions-gh-pages@v4
         with:
-          name: Test-App-DarkMode-APK
-          path: app/build/outputs/apk/debug/app-debug.apk
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          publish_dir: ./dist
