--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -6,6 +6,9 @@ on:
       - main
   workflow_dispatch:
 
+permissions:
+  contents: write  # ← This fixes your permissions issue
+
 jobs:
   build-and-deploy:
     runs-on: ubuntu-latest
@@ -63,3 +66,4 @@ jobs:
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           publish_dir: ./dist
+          
